fix date of past msgs not showing up in menu view of chat

--- a/resources/assets/css/components/chat.less
+++ b/resources/assets/css/components/chat.less
@@ -173,7 +173,7 @@
 .chat-date {
   padding-top: (@tile / 4);
   &.divider-small {
-    color: fade(@white, (100 * @opacity_darker_dark));
+    color: @color_chat_border;
     line-height: 1;
     user-select: auto;
     &:before,
